--- a/bower.json
+++ b/bower.json
@@ -16,6 +16,7 @@
     "tests"
   ],
   "dependencies": {
-    "angular": "angularjs#^1.6.5"
+    "angular": "angularjs#^1.6.5",
+    "angular-route": "^1.6.5"
   }
 }
