--- a/bower.json
+++ b/bower.json
@@ -17,6 +17,9 @@
   ],
   "dependencies": {
     "angular": "angularjs#^1.6.5",
-    "angular-route": "^1.6.5"
+    "angular-route": "^1.6.5",
+    "angular-bootstrap": "^2.5.0",
+    "angular-animate": "^1.6.5",
+    "bootstrap": "^3.3.7"
   }
 }
