--- a/bower.json
+++ b/bower.json
@@ -20,6 +20,8 @@
     "angular-route": "^1.6.5",
     "angular-bootstrap": "^2.5.0",
     "angular-animate": "^1.6.5",
-    "bootstrap": "^3.3.7"
+    "bootstrap": "^3.3.7",
+    "components-font-awesome": "^4.7.0",
+    "angular-toastr": "^2.1.1"
   }
 }
